fix some code overflow and a new post about being nice

--- a/_sass/_highlight.scss
+++ b/_sass/_highlight.scss
@@ -2,6 +2,7 @@
   border-radius: 5px;
   padding: 1rem .5rem;
   background: $polar-dark;
+  overflow: scroll hidden;
 
   .hll { background-color: #ffffcc }
   .c { color: #999; } /* Comment */
