--- a/_sass/_hsticky.scss
+++ b/_sass/_hsticky.scss
@@ -7,6 +7,7 @@
   // box-shadow: 0px 0px 10px 0px $polar-light;
   padding: 1rem 0;
   align-items: center;
+  z-index: 2;
 
   @media (max-width: 280px) {
     a.brand {
@@ -48,6 +49,7 @@
   margin-top: 5.4rem;
   background-color: $snow-light;
   box-shadow: 0px 8px 10px 0px $polar-light;
+  z-index: 2;
 
   @media (max-width: $media-large) {
     display: block;
